# ComfyUI-EasyCivitai-XTNodes

./: .gitignore  .secrets.toml.example  LICENSE.txt  __init__.py  pyproject.toml  readme.md  requirements.txt  settings.toml
civitaiNodes/: civitai_url_nodes.py  config.py  local_loader_nodes.py  prompt_concatenate.py
civitaiNodes/MyUtils/: CivitaiBaseLoader.py  LazyLoadDict.py  civitaiModelInfo.py  download_utils.py  ui_utils.py
standalone_app/: clipboard_listener.py
test/: test_class.py  test_download_util.py  test_node.py
web/js/: civitai_xt_nodes.js
