[project]
name = "comfyui-easycivitai-xtnodes"
description = "Load your model with image previews, or directly download and import Civitai models via URL. This custom ComfyUI node supports Checkpoint, LoRA, and LoRA Stack models, offering features like bypass options."
version = "0.2.0"
license = {file = "LICENSE.txt"}
dependencies = ["blake3", "sanitize_filename", "pydantic", "dynaconf", "codetiming"]

[project.urls]
Repository = "https://github.com/X-T-E-R/ComfyUI-EasyCivitai-XTNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "xter"
DisplayName = "ComfyUI-EasyCivitai-XTNodes"
Icon = ""
